// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Switch-Control should render correctly 1`] = `
<div>
  <div
    class="controls"
    data-name="abc"
  >
    <div
      class="label pull-left"
    >
      Work Area
    </div>
    <div
      class="control"
    >
      <div
        class="switch-container"
      >
        <div
          class="switch-status"
        >
          Enable
        </div>
        <div
          class="onoffswitch"
          data-name="rotary_mode"
        >
          <input
            checked=""
            class="onoffswitch-checkbox"
            id="abc"
            name="onoffswitch"
            type="checkbox"
          />
          <label
            class="onoffswitch-label"
            for="abc"
          >
            <span
              class="onoffswitch-inner"
            />
            <span
              class="onoffswitch-switch"
            />
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test Switch-Control should render correctly 2`] = `
<div>
  <div
    class="controls"
    data-name="abc"
  >
    <div
      class="label pull-left"
    >
      Work Area
    </div>
    <div
      class="control"
    >
      <div
        class="switch-container"
      >
        <div
          class="switch-status"
        >
          Disable
        </div>
        <div
          class="onoffswitch"
          data-name="rotary_mode"
        >
          <input
            checked=""
            class="onoffswitch-checkbox"
            id="abc"
            name="onoffswitch"
            type="checkbox"
          />
          <label
            class="onoffswitch-label"
            for="abc"
          >
            <span
              class="onoffswitch-inner"
            />
            <span
              class="onoffswitch-switch"
            />
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test Switch-Control should render correctly if disabled 1`] = `
<div>
  <div
    class="controls disabled"
    data-name="abc"
  >
    <div
      class="label pull-left"
    >
      Work Area
    </div>
    <div
      class="control"
    >
      <div
        class="switch-container"
      >
        <div
          class="switch-status"
        >
          ON
        </div>
        <div
          class="onoffswitch"
          data-name="rotary_mode"
        >
          <input
            checked=""
            class="onoffswitch-checkbox"
            id="abc"
            name="onoffswitch"
            type="checkbox"
          />
          <label
            class="onoffswitch-label"
            for="abc"
          >
            <span
              class="onoffswitch-inner"
            />
            <span
              class="onoffswitch-switch"
            />
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
